# tab-hoarder

./: .gitignore  Cargo.toml  README.md  background.js  build.sh  collapsed-init.js  collapsed.html  collapsed.js  generate_icons.py  manifest.json  popup-init.js  popup.html  popup.js  styles.css
src/: domain.rs  lib.rs  operations.rs  storage.rs  tab_data.rs
src/ui/: collapsed.rs  components.rs  mod.rs  popup.rs
