[package]
name = "tab-hoarder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew framework for UI
yew = { version = "0.21", features = ["csr"] }

# PatternFly UI components
patternfly-yew = "0.6.3"

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

# Web APIs
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# UUID for session IDs
uuid = { version = "1.18", features = ["v4", "js", "serde"] }

# Regular expressions
regex = "1.12"

# Random number generation for WASM
getrandom = { version = "0.2", features = ["js"] }

# Better panic messages in browser console
console_error_panic_hook = "0.1"

# Logging
log = "0.4"
wasm-logger = "0.2"
url = "2.5.7"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

[package.metadata.wasm-pack.profile.release]
wasm-opt = false  # Disable wasm-opt (causes bulk memory errors)
